--- a/example1.html
+++ b/example1.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir='ltr'>
 <head>
-  <title>My Web Page</title>
+  <meta charset='utf-8'>
+  <title>My Web Page(title)</title>
 </head>
-<body>
-  <h1>Hello world.</h1>
-  <h2>This is my first page.</h2>
-  <h3>This is my first page.</h3>
-  <h4>This is my first page.</h4>
-  <h5>This is my first page.</h5>
-  <h6>This is my first page.</h6>
-  <p>This is my paragraph.</p><br>
-  <p>This is my another paragraph.</p>
-  <b>Bold text</b>
-  <i>Italic text</i>
-  <u>Unerlined text</u>
-  <em>Emphasize text</em>
-  <strong>Strong text</strong>
-  <sub>Subscript text</sub>
-  <sup>Superscript text</sup>
+<body style="background-color:lavender;">
+  <h1 style="background-color:lightskyblue;">Hello world.(h1)</h1>
+  <h2>This is my first page.(h2)</h2>
+  <h3>This is my first page.(h3)</h3>
+  <h4>This is my first page.(h4)</h4>
+  <h5>This is my first page.(h5)</h5>
+  <h6>This is my first page.(h6)</h6>
+  <p style="color:midnightblue;">This is my paragraph.(p)(br)</p><br>
+  <p>This is my another paragraph.(p)</p>
+  <b>Bold text(b)</b>
+  <i>Italic text(i)</i>
+  <u>Unerlined text(u)</u>
+  <em>Emphasize text(em)</em>
+  <strong>Strong text(strong)</strong>
+  <sub>Subscript text(sub)</sub>
+  <sup>Superscript text(sup)</sup>
   <img src="http://by.cuc.edu.cn/_update/site/00/05/5/logo.png">
-  <a href="http://by.cuc.edu.cn/">This is the link to CUC's site.</a>
+  <a href="http://by.cuc.edu.cn/" target="_blank">This is the link to CUC's site.(a)</a>
 
 </body>
 </html>
